<resources>
    <string name="app_name">Pesona Delta</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Pesona Delta</string>
    <string name="nav_header_subtitle">38 and 37</string>
    <string name="nav_header_desc">Pesona Delta</string>
    <string name="action_settings">Settings</string>

    <string name="menu_citytour">City Tour</string>
    <string name="menu_wisata">Wisata</string>
    <string name="menu_kuliner">Kuliner</string>
    <string name="menu_event">Event</string>
    <string name="menu_share">Share</string>
    <string name="menu_info">Tentang Aplikasi</string>

    <string name="title_activity_wisata_maps">Map</string>
    <string name="title_activity_kuliner_maps">Map</string>
    <string name="title_activity_event_maps">Map</string>
    <string name="title_activity_citytour_maps">Map</string>

    <string name="title_wisata_activity_detail">Detail</string>
    <string name="title_citytour_activity_detail">Detail</string>
    <string name="title_kuliner_activity_detail">Detail</string>
    <string name="title_event_activity_detail">Detail</string>


    <string name="hint_password">hint Passowrd</string>
    <string name="hint_username">hint Username</string>
    <string name="title_activity_info_maps">Map</string>
    "
</resources>
