<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_info">

    <fragment
        android:id="@+id/nav_citytour"
        android:name="com.example.pesonadelta1.ui.citytour.CityTourFragment"
        android:label="@string/menu_citytour"
        tools:layout="@layout/citytour_fragment" />

    <fragment
        android:id="@+id/nav_wisata"
        android:name="com.example.pesonadelta1.ui.wisata.WisataFragment"
        android:label="@string/menu_wisata"
        tools:layout="@layout/wisata_fragment" />

    <fragment
        android:id="@+id/nav_kuliner"
        android:name="com.example.pesonadelta1.ui.kuliner.KulinerFragment"
        android:label="@string/menu_kuliner"
        tools:layout="@layout/kuliner_fragment" />

    <fragment
        android:id="@+id/nav_event"
        android:name="com.example.pesonadelta1.ui.event.EventFragment"
        android:label="@string/menu_event"
        tools:layout="@layout/event_fragment" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.pesonadelta1.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/share_fragment" />

    <fragment
        android:id="@+id/nav_info"
        android:name="com.example.pesonadelta1.ui.info.InfoFragment"
        android:label="@string/menu_info"
        tools:layout="@layout/info_fragment" />
</navigation>